# swarm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-rust.yml  proxy-smoke.yml  swarm-live-run.yml
docs/: 01-notes-synthesis.md  02-popcorn-cli-baseline.md  03-cli-spec.md  04-system-architecture.md  05-data-contracts.md  06-backends-and-substrates.md  07-roadmap.md  08-risk-register.md  09-web-research-notes.md  10-implementation-backlog.md  11-open-questions.md  12-m1-quickstart.md  13-m2-github-quickstart.md  14-m3-proxy-smoke-experiment.md  15-live-github-e2e.md  16-m4-policy-capsule-base-sepolia.md  17-trust-model-implemented.md  18-trust-model-target.md  19-wallet-signer-phase1.md
docs/artifacts/: 2026-02-28-ip-egress-validation.json  2026-02-28-live-collect-verifier-gating.json  2026-02-28-live-m4-policy-two-step-chain.json  2026-02-28-live-negative-key-mismatch.json  2026-02-28-live-negative-reverse-key-mismatch.json  2026-02-28-live-two-step-chain.json  2026-02-28-live-two-step-collect-verifier-gating.json
fixtures/contracts/: certificate.replay.invalid-missing-nonce.json  certificate.replay.invalid-zero-expiry.json  certificate.replay.valid.json  certificate.unknown-critical.json  certificate.valid.json  next_tokens.valid.json  node.valid.json  result.valid.json
schemas/: certificate.schema.json  next_tokens.schema.json  node.schema.json  result.schema.json
scripts/: live_proxy_e2e_verify.sh  live_two_step_chain_verify.sh
swarm-cli/: Cargo.toml
swarm-cli/src/: github_backend.rs  main.rs  net_cap.rs  signer.rs
swarm-core/: Cargo.toml
swarm-core/src/: capability.rs  lib.rs  models.rs
swarm-proxy/: Cargo.toml
swarm-proxy/src/: lib.rs  main.rs
swarm-state/: Cargo.toml
swarm-state/src/: lib.rs
swarm-verify/: Cargo.toml
swarm-verify/src/: lib.rs
