[workspace]
members = ["swarm-cli", "swarm-core", "swarm-proxy", "swarm-state", "swarm-verify"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
alloy = { version = "=0.11.1", features = ["full"] }
alloy-signer-local = { version = "=0.11.1", features = ["mnemonic", "keystore"] }
anyhow = "1.0"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
keyring = "2.3"
rpassword = "7.3"
rusqlite = { version = "0.31", features = ["bundled"] }
secrecy = "0.10"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.10"
tokio = { version = "1.44", features = ["rt-multi-thread"] }
