[package]
name = "swarm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "swarm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
swarm-core = { path = "../swarm-core" }
swarm-state = { path = "../swarm-state" }
swarm-verify = { path = "../swarm-verify" }
