[package]
name = "swarm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "swarm"
path = "src/main.rs"

[dependencies]
alloy.workspace = true
alloy-signer-local.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
keyring.workspace = true
rpassword.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
swarm-core = { path = "../swarm-core" }
swarm-state = { path = "../swarm-state" }
swarm-verify = { path = "../swarm-verify" }
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
swarm-proxy = { path = "../swarm-proxy" }
tempfile.workspace = true
