[package]
name = "swarm-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "swarm_proxy"
path = "src/lib.rs"

[[bin]]
name = "swarm-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
