[package]
name = "swarm-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
swarm-core = { path = "../swarm-core" }

[dev-dependencies]
tempfile.workspace = true
